--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -406,7 +406,7 @@
     }
    ],
    "source": [
-    "# Optional: Get all the data for the duplicate mouse ID. \n",
+    "# Get all the data for the duplicate mouse ID. \n",
     "duplicate = merged_data.loc[merged_data[\"Mouse ID\"] == \"g989\", :]\n",
     "duplicate \n"
    ]
